--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   persistent_bottom_nav_bar_v2: ^5.2.3
   lottie: ^3.1.2
   url_launcher: ^6.3.0
+  share_plus: ^9.0.0
+  package_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
