--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   url_launcher: ^6.3.0
   share_plus: ^9.0.0
   package_info_plus: ^8.0.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
