--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   package_info_plus: ^8.0.0
   provider: ^6.1.2
   flutter_native_splash: ^2.4.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
