--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   provider: ^6.1.2
   flutter_native_splash: ^2.4.1
   intl: ^0.19.0
+  fl_chart: ^0.68.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -92,6 +94,7 @@ flutter:
     - assets/lottie/
     - assets/SettingIcons/
     - assets/ReportsIcon/
+    - assets/BackOffice/Icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
