--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   intl: ^0.19.0
   fl_chart: ^0.68.0
   carousel_slider: ^4.2.1
+  pdf: ^3.11.0
+  printing: ^5.13.1
+  syncfusion_flutter_pdf: ^26.2.7
 
 dev_dependencies:
   flutter_test:
