--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   intl: ^0.19.0
   fl_chart: ^0.68.0
   carousel_slider: ^4.2.1
+  flutter_email_sender: ^6.0.3
 
 dev_dependencies:
   flutter_test:
